fixed size issues on mobile, not displayed content would still take up size

--- a/style.css
+++ b/style.css
@@ -35,8 +35,11 @@ body {
 
 .hidden {
     opacity: 0;
-    height: 0px;
     z-index: 0;
+}
+
+.hidden-display {
+    display: none;
 }
 
 /* --------------------------------------------------------------- */
@@ -311,7 +314,7 @@ body {
     /* Navbar mobile */
 
     #navbar {
-        z-index: 1;
+        z-index: 2;
         height: 6vh;
     }
 
